fixing the mobile menu obverlay and header/Navigation components so they work across viewports. Still need to finish styling on mobile menu. Moved nav__links styling from the global css to the Navigation component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -157,74 +157,3 @@ h1, h2, h3, h4, h5, h6 {
   min-width: 280px;
 }
 
-
-/* nav styles */
-
-.nav__links {
-  width: 100%;
-  display: none;
-  margin: 0;
-}
-
-.nav__links ul {
-  list-style-type: none;
-  display: flex;
-  padding: 0;
-  margin: 0;
-}
-
-.nav__links a {
-  text-decoration: none;
-  font-size: 1rem;
-  font-weight: 400;
-  color: #fff;
-  margin-bottom: 0;
-}
-
-.nav__links a:hover,
-a:focus {
-  border-bottom: 1px solid #fff;
-}
-
-
-
-
-/* Mobile styles */
-@media screen and (min-width: 636px) {
-  .nav__links {
-    display: block;
-    width: auto;
-  }
-
-  .nav__links a {
-    display: inline-block;
-    padding: 8px 16px;
-  }
-}
-
-
-  @media screen and (max-width: 768px) {
-    .nav__links {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      background-color: #333;
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.3s ease-in-out;
-    }
-
-    .nav__links.active {
-      max-height: 400px;
-    }
-
-    .nav__links ul {
-      flex-direction: column;
-    }
-
-    .nav__links li {
-      padding: 1rem 2rem;
-      border-top: 1px solid #444;
-    }
-  }
